# NLP-RAG

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_process_pdfs.ipynb
rag/: database.py  enhance.py  evaluate.py  generate.py  load_data.py  main.py  retriever.py
testset/: testset.json
