[project]
name = "nlp-rag"
version = "0.1.0"
description = "multimodal RAG on PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "ipykernel>=7.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=0.3.0",
    "langchain",
    "langchain_community",
    "langchain-ollama>=0.2.0",
    "onnxruntime-gpu>=1.24.4",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "unstructured[pdf]>=0.22.6",
    "unstructured-inference[all]>=0.4.0",
    "tensorrt-cu12",
    "rank_bm25",
    "ragas"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
